--- a/personal-website/my-personal-website/package.json
+++ b/personal-website/my-personal-website/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-personal-website",
   "version": "0.1.0",
-  "homepage": "https://raghav-7727.github.io/my-personal-website",
+  "homepage": "https://raghav-7727.github.io/my-personal-website/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
